Fixed some overflow issue

--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -55,6 +55,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   .image {
     width: 10rem;
